# cloky-elite-telegram-bot

./: .env  .env.bak.20260528_185101  .env.bak.v1.13.0_fix  .env.example  .gitignore  ACCEPTANCE.md  ARCHITECTURE.md  AUDIT_V2.2.1.md  CHANGELOG.md  Makefile  README.md  SECURITY.md  acceptance_probe.py  adapter_proxy.py  bot.py  bot.py.backup_before_v113  bot.py.bak.20260510-1734  bot.py.bak.v1.10.0  bot.py.bak.v1.11.0  bot.py.bak.v1.13.0_20260720-210439  bot.py.bak.v1.6.1  bot.py.bak.v1.7.1  bot.py.bak.v1.8.0  bot.py.bak.v1.9.2  bot.py.bak.v2.2.0_20260721-170224  bot.py.v1.6.0.bak  claude-settings.json  install_service.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cloky/: __init__.py  app.py  approval.py  config.py  doctor.py  logging_config.py  models.py  render.py  runtime.py  security.py  state.py
cloky_elite_telegram_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
logs/: cloky.jsonl
scripts/: clean_public_repo.sh  deploy.sh  migrate_v2_state.py  rollback.sh
state/: cloky.sqlite3  last_prompts.json  native_sessions.json  sessions.json  stats.json  usage_stats.json  user_modes.json
tests/: test_adapter_proxy.py  test_config.py  test_output_safety.py  test_render.py  test_runtime_flow.py  test_runtime_helpers.py  test_security.py  test_source_guards.py  test_state.py
workspace/: hermes-compression.skill
workspace/cloky-elite-telegram-bot/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  claude-settings.json  install_service.sh
(+20 files in other folders)
