[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloky-elite-telegram-bot"
version = "2.2.2"
description = "Enterprise Telegram control plane for Claude Code and Anthropic-compatible local LLM gateways"
requires-python = ">=3.11"
dependencies = [
  "claude-agent-sdk>=0.1.80,<0.2",
  "python-telegram-bot[rate-limiter]>=22.0,<23",
]

[project.scripts]
cloky = "cloky.app:main"
cloky-doctor = "cloky.doctor:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloky*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
